# opengrid

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md  SUMMARY.md  opengrid.sln  package-lock.json  package.json  validate.py
.husky/: pre-push
android/: .gitignore  README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/opengrid/android/ffi/: DiplomatBridge.kt  opengrid_ffi.kt
android/app/src/main/java/com/opengrid/android/theme/: Theme.kt
android/app/src/main/java/com/opengrid/android/ui/: MainActivity.kt  OpenGridViewModel.kt
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/opengrid/android/: CoreUnitTests.kt
core/: Cargo.toml
core/src/: error.rs  ledger.rs  lib.rs  node.rs
core/src/crdt/: mod.rs  traits.rs
core/src/crypto/: mod.rs
core/src/storage/: mod.rs
core/src/sync/: mod.rs  protocol.rs
docs/: android.md  architecture.md  core-engine.md  ffi.md  ios.md
ffi/: Cargo.toml  NodeHandle.d.h  NodeHandle.h  OpenGridEngine.d.h  OpenGridEngine.h  TestStruct.d.h  TestStruct.h  build.rs  diplomat.toml
ffi/src/: debug_udl.rs  lib.rs  minimal.udl  minimal_opengrid.udl  namespaced.udl  no_namespace.udl  opengrid.udl  simple.udl  test_lib.rs  test_minimal.udl  very_simple.udl
ios/: .gitignore  Package.swift  README.md
ios/Sources/OpenGridIOS/: ContentView.swift  OpenGridIOSApp.swift  OpenGridObserver.swift  opengridFFI.swift
ios/Tests/OpenGridIOSTests/: OpenGridIOSTests.swift
scripts/: verify_all.py
