[workspace]
members = [
    "core",
    "ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["OpenGrid Developers"]
description = "Disaster-resilient, offline-first mesh resource exchange protocol"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uniffi = "0.28"