[workspace]
members = ["core", "ffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenGrid Team"]
license = "MIT"
description = "OpenGrid Core Engine"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
diplomat = "0.14"
diplomat-runtime = "0.14"