[package]
name = "opengrid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]