[package]
name = "opengrid-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
opengrid-core = { path = "../core" }
diplomat.workspace = true
diplomat-runtime.workspace = true
diplomat-tool = "0.14"

[build-dependencies]
diplomat-tool = "0.14" 